[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wes-api-client"
dynamic = ["version"]
description = 'WES API Client'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "stripodi", email = "simone.tripodi@terradue.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/stripodi/wes-api-client#readme"
Issues = "https://github.com/stripodi/wes-api-client/issues"
Source = "https://github.com/stripodi/wes-api-client"

[tool.hatch.version]
path = "src/wes_api_client/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/wes_api_client tests}"

[tool.coverage.run]
source_pkgs = ["wes_api_client", "tests"]
branch = true
parallel = true
omit = [
  "src/wes_api_client/__about__.py",
]

[tool.coverage.paths]
wes_api_client = ["src/wes_api_client", "*/wes-api-client/src/wes_api_client"]
tests = ["tests", "*/wes-api-client/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
